fixed overlay depth issue; set .overlay z-index to 1000

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1167,7 +1167,9 @@ header {
     background: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
-    z-index: 25;
+    /* as of 6/28/24, the settings has the next highest z-index of 25 */
+    /* regardless, we'll always want the overlay to be on top of everything */
+    z-index: 1000;
 }
 
 #deleteAccountPopup {
